--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,10 @@
 <body>
     <div id="app"></div> 
     <script src="/dist/bundle.js"></script>
+     <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-database.js"></script>
+
 </body>
 
 </html>
